# hogger2

./: .clang-format  .gitignore  .gitmodules  README.md  architecture.drawio  simulation.py
common/protocol/: protocol.c
common/qt/: InterfaceWidget.cpp  Network.cpp
docs/joniak_2017/clean/: fuzja_offline_1to1.nb  fuzja_offline_1to1_r.nb  fuzja_online_lin.nb  fuzja_trans.nb  fuzja_trans2.nb  fuzja_trans2_constpsi - Kopia.nb  fuzja_trans_constpsi.nb  inz_model_phi.nb  inz_model_psi.nb  inz_off_6_lin.nb  inz_off_6_lin_dyn.nb  inz_off_6_model.nb  inz_off_6_ster.nb  inz_off_6u_lin_dyn.nb  inz_off_lin_dyn - Kopia.nb  inz_off_model_phi.nb  inz_off_model_psi.nb  inz_offu_lin_dyn-phi.nb  inz_offu_lin_dyn-phi_constpsi.nb  inz_offu_lin_dyn-psi.nb  legendy.nb  uproszczony_off_7_lin.nb  uproszczony_off_7_lin_dyn.nb  uproszczony_off_7_model.nb  uproszczony_off_9_lin_dyn.nb  uproszczony_off_9_model.nb  utils.nb
firmware/: .cproject  .mxproject  firmware.ioc
firmware/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
firmware/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
hardware/: hogger2.kicad_sym
hardware/controller/: controller.kicad_pcb  controller.kicad_pro  controller.kicad_sch  fp-lib-table  hog1.kicad_sch  hog2.kicad_sch  microcontroller.kicad_sch  motor1.kicad_sch  motor2.kicad_sch  power.kicad_sch  sensors.kicad_sch  servos.kicad_sch  sym-lib-table
hardware/hogger2.pretty/: HMC5883L_handsolder.kicad_mod  JS102011SAQN.kicad_mod  LV14340.kicad_mod  MPU6050_handsolder.kicad_mod  Molex-MiniSPOX-22057035-5268.kicad_mod  PA4341.XXXNLT.kicad_mod  XT60PW-M.kicad_mod  nRF24L01p_Mini_SMD.kicad_mod  spst_6x3mm.kicad_mod
hardware/models/: hmc5883l.step  molex-minispox-22057035-5268.step  mpu6050.step  pa4341.xxxnlt.step  spst_6x3mm.step  xt60pw-m.step
software/: get_step.py  manual.py  pid_autotune.py  pid_autotuner.py  pid_tune_integration_system.py  plotter.py  plotter_step_response.py  receive.py  recorder.py  simulation.py  trajectory.py  visualizer.py
software/bridge/: CMakeLists.txt  main.c  main.cpp
software/calibration/: CMakeLists.txt
software/calibration/src/: Interface.h  Publisher.cpp  Publisher.h  Subscriber.h  Window.cpp  Window.h
software/calibration/src/accelerometer/: Accelerometer.cpp  Accelerometer.h
software/calibration/src/gyroscope/: Gyroscope.cpp  Gyroscope.h
software/calibration/src/magnetometer/: Magnetometer.cpp  Magnetometer.h  Viewer.cpp  Viewer.h  utils.h
software/common/control/: robot_parameters.h
software/common/lrcp/: frame.c  frame.h  stream.c  stream.h
software/common/lrcp/example/: CMakeLists.txt
software/common/lrcp/example/include/: iostream.h
software/common/lrcp/example/src/: iostream.c  main.c
software/firmware/: .cproject  .mxproject  .project  firmware Debug.launch  firmware.ioc
software/firmware-esp/: CMakeLists.txt  example_control.json  sdkconfig  test.py
software/firmware-stm/: CMakeLists.txt  deadtime_calculator.c  estimator.py  flash.sh  toolchain.cmake
software/firmware-stm/cubemx/: cubemx.ioc
software/firmware-stm/include/: flow.h  imu.h  motor.h  mpu6050_regs.h  pmw3901_regs.h  reference.h  robot.h  serial.h  serialize.h  servo.h
software/firmware-stm/src/: Battery.cpp  Blink.cpp  FreeRTOSConfig.h  Internals.cpp  Internals.hpp  flow.c  imu.c  main.c  motor.c  serial.c  serialize.c  servo.c
software/firmware-stm/src/actuate/: BLDC.cpp  BLDC.hpp  DynamixelAX12A.h  DynamixelBus.cpp  DynamixelBus.hpp  DynamixelServo.cpp  DynamixelServo.hpp  Motors.cpp  Motors.hpp  Servos.cpp  Servos.hpp  ax12a.h  dynamixel.c  dynamixel.h  motor.c  motor.h  motors.c  motors.h  servos.c  servos.h
software/firmware-stm/src/com/: Communication.cpp  Mailbox.cpp  Mailbox.hpp  MailboxRegistry.cpp  MailboxRegistry.hpp  Telemetry.cpp  TelemetryRegistry.cpp  TelemetryRegistry.hpp  TelemetrySerializer.cpp  TelemetrySerializer.hpp  TelemetrySource.cpp  TelemetrySource.hpp  cmp.cpp  cmp.hpp  config.c  config.h  lrcp.cpp  stream.c  stream.h  telemetry.c  telemetry.h
software/firmware-stm/src/control/: Control.cpp  blink.c  controller.c  controller_jptd_dynamic.c  controller_jptd_dynamic_1d.c  controller_naive.c  controller_pid.c  controller_pid_cascade.c  controller_simplified_static_online.c  derivative.c  derivative.h  integrator.c  integrator.h  manual.c  moving_average.c  moving_average.h  pid.c  pid.h  trajectory.c  trajectory.h  watchdog.c  watchdog.h
software/firmware-stm/src/freertos/: MessageBuffer.hpp  Mutex.hpp  Task.hpp  Timer.hpp
software/firmware-stm/src/measure/: Battery.cpp  battery.c  estimator.c  flow.c  imu.c  mag.c  mpu6050.h  qmc5883l.h
software/firmware-stm/src/utils/: cmp.cpp  cmp.hpp  interrupt.c  interrupt.h  lrcp.cpp  lrcp.hpp  mpack.c  mpack.h  task.c  task.h  tasks.c  tasks.h
software/plots/: CMakeLists.txt
software/plots/src/: LiveChart.cpp  LiveChart.h  Subscriber.cpp  Subscriber.h  Visualizer.cpp  Visualizer.h  Window.cpp  Window.h  main.cpp
software/simulation/: CMakeLists.txt  c_source_gen.py  controller_jptd.py  controller_jptd_dynamic.py  controller_jptd_dynamic_1d.py  controller_naive.py  controller_poor.py  controller_simplified_static_online.py  generators.py  initial_condition.py  model_1d.py  model_full.py  model_naive.py  plotter.py  plotter_jptd_dynamic.py  plotter_jptd_dynamic_1d.py  plotter_naive.py  plotter_simplified_static_online.py  smooth.py
software/simulation/src/: Sink.hpp  main.cpp
software/simulation/src/controllers/: JPTD.cpp  JPTD.hpp  JPTDDynamic.cpp  JPTDDynamic.hpp  JPTDDynamic1D.cpp  JPTDDynamic1D.hpp  Naive.cpp  Naive.hpp  SimplifiedStaticOnline.cpp  SimplifiedStaticOnline.hpp  Smoother.hpp
software/simulation/src/generators/: Circle.cpp  Circle.hpp  Lemniscate.cpp  Lemniscate.hpp  TrajectoryGenerator.cpp
software/station/: CMakeLists.txt  config.py  example.py  example_control.json  example_state.json  receive.py  send.py
software/station/src/: Gamepad.cpp  Joystick.cpp  JoystickWidget.cpp  JoystickWidget.h  Network.cpp  Network.h  Window.cpp  Window.h
station/src/: Gamepad.h  Joystick.h  Window.cpp  Window.h
(+77 files in other folders)
